# fastapi-realworld-api

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/sources/: crypt.py
migrations/: env.py
migrations/versions/: 0080b4d9f66d_create_user_table.py  16a889930868_create_user_table.py  9ac51557c8fd_create_people_table.py  9ac51557c8fd_create_person_table.py  f6abd6739dc3_create_people_table.py  f6abd6739dc3_create_table_people.py
scripts/: message.py  poetry.py
server/: api.py
server/controllers/: auth_controller.py  people_controller.py  person_controller.py  user_controller.py
server/core/: api.py  config.py  context.py  crypt.py  database.py  db.py  exceptions.py  handler.py  middleware.py  openapi.py  router.py  schema.py  schemas.py  settings.py  utils.py
server/enums/: openapi_enum.py
server/models/: base_model.py  people_model.py  person_model.py  user_model.py
server/repositories/: people_repository.py  person_repository.py  user_repository.py
server/resources/: base_resource.py  people_resources.py  person_resource.py  token_resource.py  user_resource.py  user_resources.py
server/resources/metaclasses/: all_optional_metaclass.py
server/services/: auth_service.py  people_service.py  person_service.py  user_service.py
tests/: conftest.py
tests/controllers/: test_auth_controller.py  test_people_controller.py  test_person_controller.py  test_user_controller.py
tests/core/: test_context.py  test_crypt.py  test_database.py  test_db.py
tests/mocks/: async_session_mock.py  context_mock.py
tests/repositories/: test_people_respository.py  test_person_respository.py  test_user_respository.py
tests/services/: test_auth_service.py  test_people_service.py  test_person_service.py  test_user_service.py
tests/utils/: http_client.py  utils.py
